# ChangeLog for media-plugins/sfxr-dssi
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Apr 2013; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  sfxr-dssi-20121120.ebuild:
  add ~x86 keyword

*sfxr-dssi-20121120 (30 Mar 2013)

  30 Mar 2013; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  +sfxr-dssi-20121120.ebuild, +files/sfxr-dssi-20121120-wscript.patch,
  +metadata.xml:
  import
