@@ -1,5 +1,5 @@
 AUX sfxr-dssi-20121120-wscript.patch 3022 SHA256 4eafe94e07eabdf4d5e9a2e1353938541bdd2a9d32bc070b0c07f582c984b336 SHA512 acb5404f52a2d6acc52c6d2e2f89f11a74615f79af03bfeca31c979995a664ae42f047577772a03cb44894d54a0dd9392ede1a6d49d22d3952044501a7bd73cf WHIRLPOOL cfff5cdb87a2a599c5e3329b017ce93825657a71100959b1078e0d6250f87c743f68fdbc2c82ee3138a0059135ad03d926c172d3ac4398d519add9153c73a0e0
 DIST sfxr-dssi-20121120.tar.bz2 156911 SHA256 d2db6cd30db83edd85fcd7df45587245c6848f1b15f17f83125bd50ddbaad28a SHA512 e917ba15b07f12fcfb9f28a0b4112c60bd12b53311f88c870d1f3edb001837560c276a1f46f3294d224617702cb3c09d71544697f7e5be5ebb636b747eadd0e6 WHIRLPOOL 6333b302a72e27cd8a4dbb2b01a0c3d9f0799d4a5ab3188f0a9540016978a2c0684857c23f6662c5e40aabfef7528f780695bc32949d1df8e18c6f87b1598536
-EBUILD sfxr-dssi-20121120.ebuild 641 SHA256 779a41f3f69f3197e891c12a86b299700ea2eaf0ea155a58f0ea0d82c485b820 SHA512 3012ac0be8f9f1d994d4c47e70584c072c7e1970660b364cbe4343d0df73db7e402f50b17eaada8db864787a33e6d40844ce4b5e255ae10c3ad58023fd7f95ba WHIRLPOOL d0c98960fda2a0c2a8e68dd973d928e7772c102c5c061269787ff3f408ca867427b4a121df71f5a34d7122f2306a791b84f291fb3177d49c51285ea5c95dd6f3
-MISC ChangeLog 436 SHA256 a9ca33d25d983299b022ed54c50e78aaf1232ef1343859804da31875f0669649 SHA512 51fac08719d034a5e62e858790b8ce2d01fdefa2bf940d668ba7bf313ebd572889af3bdf8277b4327ecec663e7d6fc4402c929078cea33697ac5a5bea3cf8986 WHIRLPOOL 31a8fa1e4deb84c66d6136ba667f4b633759d0e26c76a07c0fdf4f31670efdb8c2644ac69139c1477a71f9e584e1d871b5425d2e81708f80178999266dad9799
+EBUILD sfxr-dssi-20121120.ebuild 638 SHA256 f5e70f89c4e1166f04b02c4c5106c6aad0f4ad8a395caf668a592a399d908d2a SHA512 54bf38f74074ca747a6fbc637611c69c7574c1559191f91b6c9fda1be3ca68ec20d271b69829cc3962e2f415f39b3044b75aba52c4bace51b928f410dd7f1569 WHIRLPOOL 1734b83ce7d7c215286132f009e05f2e0f03f73e33bcaa0174a404e5b34c4ba64a502f0d57963a09ddff687280be3bfde5fc7112d03e2cf5c9da1e2c2b6b8186
+MISC ChangeLog 567 SHA256 c1647292539eb8a0595f272e7628e2ce0fadb544fb6408add2125de2eb3d144f SHA512 33fe2e4d3e725a85e7ae4e0d5e92f4bead1f3f9167f3f749e29077e2447e362c30cfd0d831b4c79171256832151249a48d2be6b1dcd912c4c015a176129e09bd WHIRLPOOL 804c29ca37f6190a237f7e7eb7bd3f7ba55308e9f9469c47a5dc1fe2f3d4242842ab7d27234815fd1a1ad93f4f0992fc845ba25200484e8c898f7470fa130631
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
