@@ -1,10 +1,12 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: $
+# $Id$
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
-inherit waf-utils python-any-r1
+PYTHON_REQ_USE="threads(+)"
+NO_WAF_LIBDIR=1
+inherit python-any-r1 waf-utils
 
 DESCRIPTION="sfxr sound effect generator DSSI plugin"
 HOMEPAGE="http://smbolton.com/linux/"
@@ -16,17 +18,15 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 RDEPEND="dev-libs/libwhy
-	media-libs/dssi
-	media-libs/liblo
-	media-libs/ladspa-sdk
 	media-libs/alsa-lib
-	x11-libs/gtk+:2"
+	media-libs/dssi
+	media-libs/ladspa-sdk
+	media-libs/liblo
+	x11-libs/gtk+:2="
 DEPEND="${RDEPEND}
 	${PYTHON_DEPS}
 	virtual/pkgconfig"
 
 RESTRICT="mirror"
 
-DOCS=(README)
-
-PATCHES=("${FILESDIR}"/${P}-wscript.patch)
+DOCS=( README )
